videodec/enc: allow to call negiotate without ouput state

Some decoders call set_output_state from GstVideoDecoder::negotiate()
So move the g_return_val_if_fail to default_negotiate(), i.e. where
it is actually necessary.

Fix https://bugzilla.gnome.org/show_bug.cgi?id=721078